/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.utp.incompatible;

option java_package = "com.google.devtools.mobileharness.infra.controller.test.local.utp.proto";
option java_outer_classname = "IncompatibleReasonProto";

// Reasons why a device/driver/decorator converter decides not to convert a MH
// test to hybrid UTP mode.
enum ConverterIncompatibleReason {
  UNSPECIFIED_CONVERTER_INCOMPATIBLE_REASON = 0;

  // ******************************
  // Driver converters.
  // Range: 1 ~ 10_000
  // ******************************

  // AndroidInstrumentationConverter.
  // Range: 1 ~ 200
  AI_ASYNC_RUN_UNSUPPORTED = 1;
  AI_MULTI_ITERATION_UNSUPPORTED = 2;
  AI_TEST_DATA_UNSUPPORTED = 3;
  AI_TEST_ARG_UNSUPPORTED = 4;
  AI_EXTRA_OPTION_UNSUPPORTED = 5;
  AI_MULTI_DEVICE_UNSUPPORTED = 6;
  AI_MULTI_BUILD_APK_UNSUPPORTED = 7;
  AI_TEST_SERVICES_APK_UNSUPPORTED = 8;
  AI_SPLIT_METHODS_UNSUPPORTED = 9;
  AI_ITERATION_ADB_SHELL_UNSUPPORTED = 10;
  AI_ITERATION_CLEAR_BUILD_UNSUPPORTED = 11;
  AI_ITERATION_CLEAR_TEST_UNSUPPORTED = 12;
  AI_PREFIX_ANDROID_TEST_UNSUPPORTED = 13;
  AI_BROADCAST_INSTALL_MESSAGE_UNSUPPORTED = 14;
  AI_ZERO_BUILD_APK_UNSUPPORTED = 15;
  AI_ADB_SHELL_BEFORE_INSTRUMENTATION_IN_MULTI_ITERATION_UNSUPPORTED = 16;
  AI_ADB_SHELL_AFTER_INSTRUMENTATION_IN_MULTI_ITERATION_UNSUPPORTED = 17;
  AI_MULTI_ITERATION_CLEAR_BUILD_OR_TEST_UNSUPPORTED = 18;
  AI_MULTI_ITERATION_SPLIT_METHODS_UNSUPPORTED = 19;

  // AndroidMarmosetDriverConverter (AMD = AndroidMarmosetDriver).
  // Range: 201 ~ 300
  AMD_NOT_USE_JAVA_CONTROLLER = 201;

  // NoOpDriverConverter (NODR = NoOpDriver).
  // Range: 9_901 ~ 10_000
  NODR_NO_OP_DRIVER_CONVERSION_DISABLED = 9901;
  NODR_SET_TEST_RESULT_UNSUPPORTED = 9902;

  // ******************************
  // Device converters.
  // Range: 10_001 ~ 20_000
  // ******************************

  // NoOpDeviceConverter (NODV = NoOpDevice).
  // Range: 10_001 ~ 10_100
  NODV_NO_OP_DEVICE_CONVERSION_DISABLED = 10001;

  // IosSimulator
  // Range: 10_101 ~ 10_200
  IOS_SIMULATOR_UNSUPPORTED = 10101;

  // ******************************
  // Decorator converters.
  // Range: 20_001 ~ MAX
  // ******************************

  // ******************************
  // iOS Decorator converters.
  // Range: 20_001 ~ 30_000
  // ******************************

  // IosRealDeviceScreenRecorderDecorator (IDSR = IOS_DECORATOR_SCREEN_RECORDER)
  // Range: 20_001 ~ 20_100
  IDSR_MIN_OS_VERSION_UNSUPPORTED = 20001;
  IDSR_GET_OS_VERSION_EXCEPTION = 20002;
  IDSR_VIDEO_LENGTH_UNSUPPORTED = 20003;
  IDSR_USE_BUILT_IN_RECORDER_UNSUPPORTED = 20004;
  IDSR_LEGACY_RECORDER_UNSUPPORTED = 20005;
  IDSR_DEVICE_UNSUPPORTED = 20006;
  IDSR_CHECK_DEVICE_CONDITION_EXCEPTION = 20007;
  IDSR_DISABLED = 20008;

  // IosRealDeviceSysLogDecorator (IDSL = IOS_DECORATOR_SYS_LOG)
  // Range: 20_101 ~ 20_200
  IDSL_FILTERS_UNSUPPORTED = 20101;
  IDSL_LOG_LEVEL_UNSUPPORTED = 20102;
  IDSL_WAIT_SYSLOG_AFTER_TEST_SEC_UNSUPPORTED = 20103;

  // IosFilePullerDecorator (IDFPULL = IOS_DECORATOR_FILE_PULLER)
  // Range: 20_201 ~ 20_300
  IDFPULL_NOT_REAL_DEVICE = 20201;

  // IosFilePusherDecorator (IDFPUSH = IOS_DECORATOR_FILE_PUSHER)
  // Range: 20_301 ~ 20_400
  IDFPUSH_NOT_REAL_DEVICE = 20301;

  // IosGoogleAccountDecorator (IDGA = IOS_DECORATOR_GOOGLE_ACCOUNT)
  // Range: 20_401 ~ 20_500
  IDGA_DEPRECATED_PARAMS_UNSUPPORTED = 20401;
}

// MH infra-related reasons why a MH test can not run in hybrid UTP mode.
enum InfraIncompatibleReason {
  UNSPECIFIED_INFRA_INCOMPATIBLE_REASON = 0;

  LOCAL_MODE = 1;
  MULTI_DEVICE_TEST = 2;
  NOT_IN_ALLOWLIST = 3;
  IN_BLOCKLIST = 4;
  NO_HYBRID_UTP_MODE_CONFIG = 5;
  TEST_RETRY = 6;
  MANUALLY_FORCIBLY_DISABLE = 7;
  SHARED_POOL = 8;
  UNFIXED_ISSUE = 9;
  HYBRID_UTP_MODE_CONFIG_PARSE_ERROR = 10;
  HYBRID_UTP_MODE_CONFIG_READ_ERROR = 11;
  SHARED_POOL_ROLLOUT = 12;
  PREFIX_ANDROID_TEST_ROLLOUT = 13;
  TEST_FLOW_CONVERTER_ERROR = 14;
  IOS_DRIVER_UNSUPPORTED = 15;
  INTEGRATION_OR_STAGING = 16;
  ATS2 = 17;
  UTP_TEST_RUNNER_NOT_FOUND = 18;
}

// MH infra-related reasons that a converter does not support hybrid UTP mode.
enum ConverterInfraIncompatibleReason {
  UNSPECIFIED_CONVERTER_INFRA_INCOMPATIBLE_REASON = 0;

  NO_CONVERTER = 1;
  CONVERTER_LOAD_ERROR = 2;
  NO_POST_PROCESSOR = 3;
  CONVERTER_THROW_EXCEPTION = 4;
  CONVERTER_NOT_SET_UTP_CONFIG = 5;
  CONVERTER_CHANGE_DECORATOR_STACK_COUNT = 6;
  CONVERTER_NOT_SET_MH_UTP_DRIVER = 7;
  CONVERTER_SPECIFY_NONEXISTENT_POST_PROCESSOR = 8;
  CONVERTER_NOT_SET_DRIVER_POST_PROCESSOR = 9;
  CONVERTER_ORDER_SENSITIVE = 10;
  CONVERTER_SPECIFY_NONEXISTENT_PRE_PROCESSOR = 11;
}

// Hybrid UTP mode incompatible reasons.
message IncompatibleReason {
  // Required.
  oneof reason {
    ConverterIncompatibleReason converter_incompatible_reason = 1;
    InfraIncompatibleReason infra_compatible_reason = 2;
    ConverterInfraIncompatibleReason converter_infra_incompatible_reason = 3;
  }

  // Conditional required.
  // Required if and only if converter_infra_incompatible_reason is present.
  string converter_name_prefix = 4;

  // Optional.
  string detail = 5;
}
